--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nx/devkit": "17.3.0-beta.4",
-    "@nx/eslint": "17.3.0-beta.4",
-    "@nx/eslint-plugin": "17.3.0-beta.4",
-    "@nx/jest": "17.3.0-beta.4",
-    "@nx/js": "17.3.0-beta.4",
-    "@nx/next": "17.3.0-beta.4",
-    "@nx/playwright": "17.3.0-beta.4",
-    "@nx/workspace": "17.3.0-beta.4",
+    "@nx/devkit": "17.2.8",
+    "@nx/eslint": "17.2.8",
+    "@nx/eslint-plugin": "17.2.8",
+    "@nx/jest": "17.2.8",
+    "@nx/js": "17.2.8",
+    "@nx/next": "17.2.8",
+    "@nx/playwright": "17.2.8",
+    "@nx/workspace": "17.2.8",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
@@ -39,7 +39,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "nx": "17.3.0-beta.4",
+    "nx": "17.2.8",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
