--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nx/cypress": "17.2.8",
     "@nx/devkit": "17.2.8",
     "@nx/eslint": "17.2.8",
     "@nx/eslint-plugin": "17.2.8",
@@ -18,10 +19,12 @@
     "@nx/js": "17.2.8",
     "@nx/next": "17.2.8",
     "@nx/playwright": "17.2.8",
+    "@nx/react": "17.2.8",
     "@nx/workspace": "17.2.8",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
+    "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@types/react": "18.2.33",
@@ -29,9 +32,11 @@
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "babel-jest": "^29.4.1",
+    "cypress": "^13.0.0",
     "eslint": "~8.48.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-playwright": "^0.15.3",
